# RefurnisherCore

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  characterinfo  refurnisher_test  test.json  testinfo
include/: bstream.h  jfile.h  jmp.h
src/: RefurnisherCore.hpp  jfile.cpp  jmp.cpp
tests/: main.cpp
